deleting favorites API
