# recipeApp/server/docs/swagger.json
@@ -14,6 +14,71 @@
     "host": "localhost:5000",
     "basePath": "/",
     "paths": {
+        "/server/favorites/add": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "add a favorite item to the database",
+                "parameters": [
+                    {
+                        "description": "favorite data",
+                        "name": "requestBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.favPostRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                }
+            }
+        },
+        "/server/favorites/delete/{uid}/{rid}": {
+            "delete": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "delete a favorite item from the database",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "user id of favorite to delete",
+                        "name": "uid",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "recipe id of favorite to delete",
+                        "name": "rid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                }
+            }
+        },
         "/server/login": {
             "post": {
                 "consumes": [
@@ -311,6 +376,17 @@
         }
     },
     "definitions": {
+        "handler.favPostRequest": {
+            "type": "object",
+            "properties": {
+                "recipeid": {
+                    "type": "integer"
+                },
+                "userid": {
+                    "type": "integer"
+                }
+            }
+        },
         "handler.mealPostRequest": {
             "type": "object",
             "properties": {
